Tue Sep 24 17:15:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/encdb.c (ENC_DUMMY_UNICODE): make BOM-encodings dummy.

	* encoding.c (enc_autoload): keep dummy encodings dummy.

Tue Sep 24 16:41:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry#write): data size
	  is in bytes, not chars.  terminators should be placed automatically.

Tue Sep 24 16:39:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry#each_value): encode
	  name.

	* ext/win32/lib/win32/registry.rb (Win32::Registry#each_key): ditto.

	* ext/win32/lib/win32/registry.rb (Win32::Registry#export_string):
	  encode to locale encoding if default internal is not set.

Tue Sep 24 16:35:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API#EnumKey):
	  size of the name is in WCHARs, not in bytes.

Tue Sep 24 14:07:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* gc.c (free_method_cache_entry_i): unused function

	* gc.c (rb_free_mc_table): ditto

	* internal.h (method_cache_entry_t): unused struct

	* vm_method.c (verify_method_cache): remove unused variable

	* vm_method.c (rb_method_entry): ditto

Tue Sep 24 14:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c (class_alloc): remove mc_tbl

	* gc.c (obj_free): ditto

	* internal.h (struct rb_classext_struct): ditto

	* method.h (rb_method_entry): remove ent param

	* vm_method.c: restore the global method cache. Per class cache tables
	  turned out to be far too slow.

	  [ruby-core:57289] [Bug #8930]

Tue Sep 24 12:51:07 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API): need
	  Constants.

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API#EnumValue):
	  size of the name is in WCHARs, not in bytes.

Mon Sep 23 22:16:09 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
